Tara works, New Cabling for weight Sensor, Weight Sensor works?, Export fixed, etc